tests/rgs/valid/multiple_stories.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION patrol.
        EVENT idle MYSELF.
        DURING ALWAYS:
            WHEN idle MYSELF:
                DO patrol.

STORY combat PRIORITY 2.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    AGENT Guard:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
