tests/rgs/syntax_errors/do_believe_missing_name.rgs
STORY DEFAULT.
    AGENT Guard:
        EVENT idle MYSELF.
        CONDITION armed MYSELF.
        DURING ALWAYS:
            WHEN idle MYSELF:
                DO BELIEVE.
